--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
+
+@import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
+
 body {
   margin: 0;
-  font-family: "Press Start 2P, cursive;
+  font-family: 'Press Start 2P', cursive;
   font-size: 2em;
   color: white;
 }
 button {
-  outine: none;
+  outline: none;
   cursor: pointer;
   border: none;
   box-shadow: 3px 5px 0px 0px rgba(0,0,0,0.75);
@@ -32,7 +35,7 @@ button {
 }
 #controlls {
   position: absolute;
-  min-widht: 100%;
+  min-width: 100%;
   min-height: 100%;
   display: flex;
   align-items: flex-end;
@@ -40,9 +43,9 @@ button {
 }
 #controlls div {
   display: grid;
-  grid-template-colums: 50px 50px 50px;
+  grid-template-columns: 50px 50px 50px;
   grid-template-rows: auto auto;
-  grid-colum-gap: 10px;
+  grid-column-gap: 10px;
   grid-row-gap: 10px;
   margin-bottom: 20px;
 }
@@ -54,5 +57,3 @@ button {
 #controlls button:first-of-type {
   grid-column: 1/-1;
 }
-
-
