--- a/style.css
+++ b/style.css
@@ -57,3 +57,9 @@ button {
 #controlls button:first-of-type {
   grid-column: 1/-1;
 }
+#Azali{
+  position: absolute;
+  bottom: 80px;
+  right: 50px;
+}
+  
